test_suite5/ALAN/test_suite/alan-2022-examples/failing/007000_mutation.alan
source W begin put get v end
